--- a/main.css
+++ b/main.css
@@ -1,6 +1,15 @@
 @media screen and (min-width: 1336px) {
 
-	
+
+h1 {
+    font-size: 27px;
+}
+h2 {
+    font-size: 22px;
+}
+h3 {
+    font-size: 18px;
+}
 body {
 	float: none;
 	background-color: #0af;
