--- a/main.css
+++ b/main.css
@@ -2,12 +2,15 @@
 
 
 h1 {
-    font-size: 27px;
+    font-size: 32px;
 }
 h2 {
-    font-size: 22px;
+    font-size: 27px;
 }
 h3 {
+    font-size: 22px;
+}
+h4 {
     font-size: 18px;
 }
 body {
