--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-@media screen and (min-width: 1336px) {
-
-
 h1 {
     font-size: 32px;
 }
@@ -110,6 +107,7 @@ p .secret {
 
 
 
+
 .cssbar {
 	display: inline-block;
 	list-style-type: none;
@@ -117,7 +115,6 @@ p .secret {
 	margin-right:auto;
     overflow: hidden;
     background-color: #191;
-	width: 80%;
 }
 .cssbar img {
 	float: left;
@@ -142,4 +139,31 @@ p .secret {
 .cssbar .active {
 	background-color: #0b0;
 }
+
+
+.cssbar {
+	display: inline-block;
+	list-style-type: none;
+	margin-left:auto;
+	margin-right:auto;
+    overflow: hidden;
+    background-color: #191;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+.cssbar a {
+	font-family: 'PT Sans Narrow', sans-serif;
+	float: left;
+	display: block;
+    color: white;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+}
+.cssbar a:hover:not(.active) {
+	background-color: #0a0;
+}
+.cssbar a .active {
+	background-color: #0b0;
 }
