--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ body {
 	float: none;
 	background-color: #0af;
 	width: 99%;
+    height: 99%;
 }
 iframe {
 	width: 640px;
@@ -49,6 +50,7 @@ video {
 	margin-left:auto;
 	margin-right:auto;
 	width: 80%;
+    height: 150%;
 	border:1px black solid;
 	background: #ffffff;
 	padding-bottom: 15px;
@@ -115,6 +117,7 @@ p .secret {
 	margin-right:auto;
     overflow: hidden;
     background-color: #191;
+    width: 100%;
 }
 .cssbar img {
 	float: left;
