--- a/main.css
+++ b/main.css
@@ -14,8 +14,10 @@ body {
 	float: none;
 	background-color: #0af;
 	width: 99%;
-    height: 99%;
+   height: 99%;
+   margin: auto;
 }
+
 iframe {
 	width: 75%;
     height: 360px;
