--- a/main.css
+++ b/main.css
@@ -11,11 +11,11 @@ h4 {
     font-size: 18px;
 }
 body {
-	float: none;
-	background-color: #0af;
+    background-color: #0af;
+    float: none;
 	width: 99%;
-   height: 99%;
-   margin: auto;
+    height: 99%;
+    margin: auto;
 }
 
 iframe {
@@ -38,9 +38,8 @@ video {
 	width: 50%;
 }
 .download {
+    background-color: #070;
 	display: inline-block;
-	background-color: #070;
-	color: #fff;
 	margin: auto;
 	padding: 5px;
 	border:2px black solid;
@@ -51,6 +50,7 @@ video {
 }
 
 .wrapper {
+    background-color: #ffffff;
 	font-family: 'Titillium Web', sans-serif;
 	float: none;
 	margin-left:auto;
@@ -58,32 +58,31 @@ video {
 	width: 80%;
     height: 150%;
 	border:1px black solid;
-	background: #ffffff;
 	padding-bottom: 15px;
 }
 
 nav {
+    background-color: #191;
 	display: inline-block;
 	list-style-type: none;
 	margin-left:auto;
 	margin-right:auto;
     overflow: hidden;
-    background-color: #191;
 	width: 80%;
 }
 nav img {
+    color: white;
 	float: left;
 	display: block;
-    color: white;
     text-align: center;
     padding: 0px 0px;
     text-decoration: none;
 }
 nav a {
+    color: white;
 	font-family: 'PT Sans Narrow', sans-serif;
 	float: left;
 	display: block;
-    color: white;
     text-align: center;
     padding: 21px 16px;
     text-decoration: none;
@@ -94,7 +93,6 @@ nav a:hover:not(.active) {
 nav .active {
 	background-color: #0b0;
 }
-
 p {
 	width: 90%;
 	text-align: left;
@@ -112,31 +110,27 @@ p .secret {
 	display: none;
 	width: 100px;
 }
-
-
-
-
 .cssbar {
+    background-color: #191;
 	display: inline-block;
 	list-style-type: none;
 	margin-left:auto;
 	margin-right:auto;
     overflow: hidden;
-    background-color: #191;
     width: 100%;
 }
 .cssbar img {
+    color: white;
 	float: left;
 	display: block;
-    color: white;
     text-align: center;
     padding: 0px 0px;
     text-decoration: none;
 }
 .cssbar a {
+    color: white;
 	font-family: 'PT Sans Narrow', sans-serif;
 	display: block;
-    color: white;
     text-align: center;
     padding: 21px 16px;
     text-decoration: none;
@@ -149,22 +143,12 @@ p .secret {
 .cssbar .right {
     float: right;
 }
-
-.cssbar a:hover:not(.active) {
-	background-color: #0a0;
-}
-.cssbar .active {
-	background-color: #0b0;
-}
-
-
 .cssbar {
 	display: inline-block;
 	list-style-type: none;
 	margin-left:auto;
 	margin-right:auto;
     overflow: hidden;
-    background-color: #191;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -173,7 +157,6 @@ p .secret {
 	font-family: 'PT Sans Narrow', sans-serif;
 	float: left;
 	display: block;
-    color: white;
     text-align: center;
     padding: 10px 10px;
     text-decoration: none;
@@ -181,6 +164,6 @@ p .secret {
 .cssbar a:hover:not(.active) {
 	background-color: #0a0;
 }
-.cssbar a .active {
+.cssbar .active {
 	background-color: #0b0;
 }
